# my-researcher

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
backend/: Dockerfile  LOCAL_SETUP.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  config.py  documents.py  exports.py  research.py
backend/app/core/: config.py  database.py  redis.py
backend/app/core/research/: __init__.py
backend/app/core/security/: __init__.py  auth.py
backend/app/core/websocket/: __init__.py  manager.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/tasks/: __init__.py  research_tasks.py
backend/scripts/: create_default_user.py  dev.py  init_db.py  init_docs.py  install.sh  verify_pgvector.py
docs/: GPT-Researcher前端UX设计方案.md  backend-design.md  deep_research_2025年网络小说中的爽点机制.md  gpt-researcher-架构说明.md  gpt-researcher文档总结.md  skills调用机制.md  后端功能覆盖总结.md
frontend/: QUICKSTART.md  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ResearchProgressPromptKit.tsx  ResearchReport.tsx
frontend/src/stores/: research.ts
frontend/src/types/: indexeddb.ts  research.ts
reference/: .env.example  main.py  mcp_result_patch.py  research_example.py  test_mcp.py  test_mixed_llm.py  web_search_mcp.py
reference/old-implementation/frontend/: ResearchProgress.tsx  api.ts
(+12 files in other folders)
